<resources>
    <string name="title_home">Home</string>
    <string name="title_report">Laporan</string>
    <string name="title_news">Berita</string>
    <string name="title_guide">Panduan</string>
    <string name="title_profile">Profil</string>
    <string name="action_close">Tutup</string>
    <string name="action_retry">Coba Lagi</string>
    <string name="action_yes">Ya</string>
    <string name="action_no">Tidak</string>
    <string name="msg_error_invalid_data">Kolom %s tidak valid.</string>
    <string name="msg_error_general_network">Tidak ada koneksi internet, mohon coba kembali.</string>
    <string name="msg_error_general_not_found">Maaf, data yang anda cari tidak ditemukan.</string>
    <string name="msg_error_general_auth">Mohon login terlebih dahulu untuk mengakses halaman ini.</string>
    <string name="msg_error_general_unknown">Terjadi error yang tidak diketahui.</string>
    <string name="msg_under_development">Maaf, fitur ini masih dalam tahap pengembangan.</string>
    <string name="text_version">Versi %s</string>
    <string name="msg_landing_content_title_1">Informasi Bencana Alam</string>
    <string name="msg_landing_content_message_1">Dapatkan informasi seputar bencana alam dengan mudah dan akurat.</string>
    <string name="msg_landing_content_title_2">Berita Bencana Alam</string>
    <string name="msg_landing_content_message_2">Infromasi seputar bencana alam yang terjadi di sekitar anda</string>
    <string name="msg_landing_content_title_3">Lapor Bencana Alam</string>
    <string name="msg_landing_content_message_3">Laporkan kejadian bencana alam disekitar anda agar petugas dan masyarakat lain mendapatkan informasi lebih cepat dan akurat.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plain_hello_with_comma">Halo,</string>
    <string name="plain_welcome">Selamat Datang</string>
    <string name="plain_email">Email</string>
    <string name="plain_password">Password</string>
    <string name="msg_doesnt_have_account">Belum punya akun?</string>
    <string name="action_register">Daftar</string>
    <string name="action_enter">Masuk</string>
    <string name="msg_already_have_account">Sudah punya akun?</string>
    <string name="msg_title_register">Belum Punya Akun? Silahkan</string>
    <string name="plain_create_account">Buat Akun</string>
    <string name="plain_phone_number">Nomor Telepon</string>
    <string name="plain_nik">NIK</string>
    <string name="plain_gender">Jenis Kelamin</string>
    <string name="plain_full_name">Nama Lengkap</string>
    <string name="action_forgot_password">Lupa Password</string>
    <string name="msg_forgot_password">Silakan masukkan email yang terdaftar pada aplikasi untuk melakukan reset password. Setelah melakukan reset password sistem akan mengirimkan email berisi password baru. Periksa folder spam jika pesan tidak ditemukan.</string>
    <string name="action_send">Kirim</string>
    <string name="msg_success_register">Berhasil membuat akun baru. Selamat datang, %s</string>
    <string name="action_ok">Ok</string>
    <string name="msg_title_forgot_password_success">Reset Password Berhasil</string>
    <string name="msg_success_forgot_password">Silakan cek email anda. kami telah mengirimkan password baru.</string>
    <string name="plain_today">Hari Ini</string>
    <string name="action_see">Lihat</string>
    <string name="title_volcano">Status Gunung Api</string>
    <string name="title_covid_information">Informasi COVID-19</string>
    <string name="msg_covid_information">Informasi Covid wilayah Jawa Timur</string>
    <string name="plain_total_case">Total Kasus</string>
    <string name="plain_positive">Positif</string>
    <string name="plain_recovered">Sembuh</string>
    <string name="plain_died">Meninggal</string>
    <string name="title_newest_earth_quake">Gempa Bumi Terbaru</string>
    <string name="title_earth_quake">Gempa Bumi</string>
    <string name="title_satellite_short">Citra Satelit</string>
    <string name="title_satellite_long">Citra Satelit Himawari-8 IR Enhanced</string>
    <string name="title_report_long">Laporan Bencana Alam</string>
    <string name="action_see_all">Lihat Semua</string>
    <string name="msg_report_home">Daftar laporan bencana alarm dari masyarakat</string>
    <string name="title_latest_news">Berita Terkini</string>
    <string name="msg_news_home">Daftar berita seputar bencana alam</string>
    <string name="msg_volcano_status">Daftar status gunung api di Indonesia.</string>
    <string name="msg_empty_volcano">Data status gunung api kosong.</string>
    <string name="plain_indonesia">Indonesia</string>
    <string name="msg_covid_header">Data informasi Covid-19 diupdate setiap hari.</string>
    <string name="plain_area">Wilayah</string>
    <string name="plain_t">T</string>
    <string name="plain_m">M</string>
    <string name="plain_s">S</string>
    <string name="plain_p">P</string>
    <string name="plain_tsunami">Tsunami</string>
    <string name="plain_depth">Kedalaman</string>
    <string name="action_detail">Detail</string>
    <string name="title_review_app">Review Aplikasi</string>
    <string name="title_about">Tentang Aplikasi</string>
    <string name="action_exit">Keluar</string>
    <string name="title_profile_update">Ubah Profil</string>
    <string name="title_profile_detail">Detail Profil</string>
    <string name="action_save">Simpan</string>
    <string name="title_other_news">Berita Lainnya</string>
    <string name="text_temperature">%dC</string>
    <string name="text_humidity">%d%%</string>
    <string name="text_wind">%.1fKm/h</string>
    <string name="plain_magnitude">Magnitude</string>
    <string name="symbol_stripe">-</string>
    <string name="text_two_data_with_stripe">%1$s - %2$s</string>
    <string name="msg_success_logout">Berhasil logout, sampai jumpa kembali</string>
    <string name="msg_confirmation_logout">Anda yakin ingin keluar?</string>
    <string name="plain_data_source">Sumber Data</string>
    <string name="app_data_source" formatted="true">
        https://data.bmkg.go.id \n
        https://inderaja.bmkg.go.id \n
        https://kawalcorona.com \n
    </string>
    <string name="msg_success_update_photo_profile">Berhasil memperbarui foto profil</string>
    <string name="msg_success_update_profile">Berhasil memperbarui data diri</string>
    <string name="msg_title_user_report_history_list">Daftar semua riwayat laporan bencana alam anda.</string>
    <string name="action_create_report">Laporan</string>
    <string name="plain_report_status_waiting">Menunggu Persetujuan</string>
    <string name="plain_report_status_accepted">Disetujui</string>
    <string name="plain_report_status_rejected">Ditolak</string>
    <string name="msg_report_list">Daftar semua laporan bencana alam dari masyarakat.</string>
    <string name="msg_empty_report">Tidak ada data laporan bencana alam.</string>
    <string name="msg_empty_news">Tidak ada data berita terkini.</string>
    <string name="title_report_detail">Detail Laporan</string>
    <string name="plain_report_location">Alamat Kejadian</string>
    <string name="text_two_data_with_comma">%1$d, %2$d</string>
    <string name="plain_report_photo">Foto Kejadian</string>
    <string name="plain_report_status">Status Laporan</string>
    <string name="text_approved_by">Disetujui oleh %s</string>
    <string name="text_rejected_by">Ditolak oleh %s</string>
    <string name="plain_disaster">Bencana Alam</string>
    <string name="plain_description">Deskripsi</string>
    <string name="plain_user_name">Nama Pelapor</string>
    <string name="action_reject">Tolak</string>
    <string name="action_approve">Setujui</string>
    <string name="msg_success_accept_report">Laporan berhasil disetujui.</string>
    <string name="msg_success_reject_report">Laporan berhasil ditolak.</string>
    <string name="msg_confirmation_accept_report">Setujui laporan bencana ini?</string>
    <string name="msg_confirmation_reject_report">Tolak laporan bencana ini?</string>
    <string name="title_create_report_long">Laporkan Bencana Alam</string>
    <string name="plain_report_form">Formulir Laporan</string>
    <string name="msg_report_form">Isilah formulir dibawah ini untuk melaporkan bencana alam</string>
    <string name="plain_coordinate">Koordinat</string>
    <string name="msg_success_submit_report">Berhasil mengirimkan laporan bencana alam</string>
    <string name="action_select_location">Pilih Lokasi</string>
    <string name="title_create_report_location">Pilih Lokasi Kejadian</string>
    <string name="plain_finished">Selesai</string>
    <string name="plain_on_process">Dalam Proses</string>
    <string name="app_api_key_google_maps">AIzaSyBjSuyqcvOh9FTn_4ldR069Gu7_UNXuBZE</string>
    <string name="msg_warning_select_location">Mohon pilih lokasi koordinat kejadian terlebih dahulu</string>
    <string name="action_see_detail">Lihat Detail</string>
    <string name="msg_satellite_update_info">Citra diperbarui tiap 6 jam sekali dari situs BMKG.</string>
    <string name="action_add_photo">Tambah Foto</string>
    <string name="action_camera">Kamera</string>
    <string name="action_gallery">Galeri</string>
    <string name="msg_error_permission_camera">Mohon izinkan aplikasi untuk mengakses kamera dan galeri.</string>
    <string name="msg_error_permission_location">Mohon izinkan aplikasi untuk mengakses lokasi anda.</string>
    <string name="plain_info">Pemberitahuan</string>
    <string name="msg_confirmation_create_report">Apakah anda yakin dengan laporan ini? Keaslian data akan dipertanggung jawabkan oleh petugas.</string>
    <string name="msg_title_guide">Panduan Menanggapi Bencana Alam</string>
    <string name="msg_intro_guide">Berikut adalah beberapa panduan dalam menanggapi bencana alam yang terjadi disekitar kita</string>
    <string name="plain_list_natural_disaster">Daftar Panduan Bencana Alam</string>
    <string name="plain_kind_of_natural_disaster">Jenis-jenis panduan berdasarkan bencana alam</string>
    <string name="msg_success_copied_to_clipboard">Disalin ke clipboard</string>
</resources>