<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/userHomeFragment"
        android:icon="@drawable/ic_home_selector_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/userNewsListFragment"
        android:icon="@drawable/ic_news_selector_24"
        android:title="@string/title_news" />
    <item
        android:id="@+id/userReportFragment"
        android:icon="@drawable/ic_report_selector_24"
        android:title="@string/title_report" />
    <item
        android:id="@+id/userGuideFragment"
        android:icon="@drawable/ic_guide_selector_24"
        android:title="@string/title_guide" />
    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_profile_selector_24"
        android:title="@string/title_profile" />
</menu>