<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/plain_info"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/msg_confirmation_create_report"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?attr/colorTextSecondary"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_no"
            style="@style/Widget.BPBD.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/action_no"
            app:layout_constraintEnd_toStartOf="@id/button_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/action_yes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_no"
            app:layout_constraintTop_toTopOf="@id/button_no" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>