<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="view"
            type="id.go.blitarkab.bpbd.presentation.ui.main.register.RegisterContract.View" />

        <variable
            name="presenter"
            type="id.go.blitarkab.bpbd.presentation.ui.main.register.RegisterContract.Presenter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.main.register.RegisterFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_message_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/msg_already_have_account"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_action_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_action_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="@{!presenter.stateLoading}"
            android:onClick="@{() -> view.openLoginPage()}"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/action_enter"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBaseline_toBaselineOf="@id/text_message_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_message_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:enabled="@{!presenter.stateLoading}"
            android:onClick="@{() -> presenter.register()}"
            android:text="@string/action_register"
            app:layout_constraintBottom_toTopOf="@id/text_action_login" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/button_register"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/msg_title_register"
                    android:textAppearance="?attr/textAppearanceSubtitle1" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/plain_create_account"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:hint="@string/plain_full_name"
                    app:startIconDrawable="@drawable/ic_profile_outline_24">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.BPBD.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!presenter.stateLoading}"
                        android:inputType="textCapWords"
                        android:text="@={presenter.nameObservable}"
                        tools:text="deriarmanda@test.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/plain_email"
                    app:startIconDrawable="@drawable/ic_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.BPBD.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!presenter.stateLoading}"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:text="@={presenter.emailObservable}"
                        tools:text="deriarmanda@test.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.BPBD.TextInputLayout.Choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/plain_gender"
                    app:endIconDrawable="@drawable/ic_choice_toggle"
                    app:startIconDrawable="@drawable/ic_round_link_24">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/choice_gender"
                        style="@style/Widget.BPBD.AutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!presenter.stateLoading}"
                        android:inputType="@{InputType.TYPE_NULL}"
                        android:text="@={presenter.genderObservable}"
                        tools:text="deriarmanda@test.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/plain_nik"
                    app:startIconDrawable="@drawable/ic_nik_24">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.BPBD.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!presenter.stateLoading}"
                        android:inputType="number"
                        android:text="@={presenter.nikObservable}"
                        tools:text="deriarmanda@test.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/plain_phone_number"
                    app:startIconDrawable="@drawable/ic_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.BPBD.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!presenter.stateLoading}"
                        android:inputType="number"
                        android:text="@={presenter.phoneObservable}"
                        tools:text="deriarmanda@test.com" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:hint="@string/plain_password"
                    app:endIconDrawable="@drawable/ic_password_toggle"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_password_24">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Widget.BPBD.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!presenter.stateLoading}"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:text="@={presenter.passwordObservable}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:isVisible="@{presenter.stateLoading}"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>